--- a/metadata/com/kingdee/eas/fdc/contract/client/ContractBillEditUI.ui
+++ b/metadata/com/kingdee/eas/fdc/contract/client/ContractBillEditUI.ui
@@ -15669,9 +15669,9 @@
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillEditUI].components.component[contContractBillReceive].properties.property[boundLabelText].value">
             <lang locale="en_US" value="null" />
-            <lang locale="zh_CN" value="收入合同" />
-            <lang locale="zh_HK" value="收入合同" />
-            <lang locale="zh_TW" value="收入合同" />
+            <lang locale="zh_CN" value="关联合同" />
+            <lang locale="zh_HK" value="關聯合同" />
+            <lang locale="zh_TW" value="關聯合同" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillEditUI].components.component[contContractBillReceive].properties.property[boundLabelUnderline].value">
             <lang locale="en_US" value="true" />
