--- a/metadata/com/kingdee/eas/fdc/contract/client/ContractBillReceiveLinkContractBillEditUI.ui
+++ b/metadata/com/kingdee/eas/fdc/contract/client/ContractBillReceiveLinkContractBillEditUI.ui
@@ -19,7 +19,7 @@
         <component>
             <name>CoreUI</name>
             <alias>uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[CoreUI].alias</alias>
-            <userDefined>true</userDefined>
+            <userDefined>false</userDefined>
             <classType>com.kingdee.bos.ctrl.swing.KDPanel</classType>
             <isContainer>true</isContainer>
             <constraints>10,10,675,110</constraints>
@@ -465,236 +465,283 @@
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionCancel].longDescription">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionCancel].name">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionCancel].shortDescription">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionCancel].smallIcon">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionConfirm].longDescription">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionConfirm].name">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionConfirm].shortDescription">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].actions.action[actionConfirm].smallIcon">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="关联合约规划" />
+            <lang locale="zh_HK" value="關聯合約規劃" />
             <lang locale="zh_TW" value="關聯合約規劃" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[CoreUI].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[btnCancel].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[btnCancel].properties.property[action].value">
             <lang locale="en_US" value="actionCancel" />
             <lang locale="zh_CN" value="actionCancel" />
+            <lang locale="zh_HK" value="actionCancel" />
             <lang locale="zh_TW" value="actionCancel" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[btnCancel].properties.property[text].value">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="取消" />
+            <lang locale="zh_HK" value="取消" />
             <lang locale="zh_TW" value="取消" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[btnConfirm].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[btnConfirm].properties.property[action].value">
             <lang locale="en_US" value="actionConfirm" />
             <lang locale="zh_CN" value="actionConfirm" />
+            <lang locale="zh_HK" value="actionConfirm" />
             <lang locale="zh_TW" value="actionConfirm" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[btnConfirm].properties.property[text].value">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="确定" />
+            <lang locale="zh_HK" value="確定" />
             <lang locale="zh_TW" value="確定" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer1].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer1].properties.property[boundLabelLength].value">
             <lang locale="en_US" value="100" />
             <lang locale="zh_CN" value="100" />
+            <lang locale="zh_HK" value="100" />
             <lang locale="zh_TW" value="100" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer1].properties.property[boundLabelText].value">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="关联合同" />
+            <lang locale="zh_HK" value="關聯合同" />
             <lang locale="zh_TW" value="關聯合同" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer1].properties.property[boundLabelUnderline].value">
             <lang locale="en_US" value="true" />
             <lang locale="zh_CN" value="true" />
+            <lang locale="zh_HK" value="true" />
             <lang locale="zh_TW" value="true" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer3].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer3].properties.property[boundLabelLength].value">
             <lang locale="en_US" value="100" />
             <lang locale="zh_CN" value="100" />
+            <lang locale="zh_HK" value="100" />
             <lang locale="zh_TW" value="100" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer3].properties.property[boundLabelText].value">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="控制金额" />
+            <lang locale="zh_HK" value="控制金額" />
             <lang locale="zh_TW" value="控制金額" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer3].properties.property[boundLabelUnderline].value">
             <lang locale="en_US" value="true" />
             <lang locale="zh_CN" value="true" />
+            <lang locale="zh_HK" value="true" />
             <lang locale="zh_TW" value="true" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer3].properties.property[visible].value">
             <lang locale="en_US" value="false" />
             <lang locale="zh_CN" value="false" />
+            <lang locale="zh_HK" value="false" />
             <lang locale="zh_TW" value="false" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer4].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer4].properties.property[boundLabelLength].value">
             <lang locale="en_US" value="100" />
             <lang locale="zh_CN" value="100" />
+            <lang locale="zh_HK" value="100" />
             <lang locale="zh_TW" value="100" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer4].properties.property[boundLabelText].value">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="控制余额" />
+            <lang locale="zh_HK" value="控制餘額" />
             <lang locale="zh_TW" value="控制餘額" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer4].properties.property[boundLabelUnderline].value">
             <lang locale="en_US" value="true" />
             <lang locale="zh_CN" value="true" />
+            <lang locale="zh_HK" value="true" />
             <lang locale="zh_TW" value="true" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDLabelContainer4].properties.property[visible].value">
             <lang locale="en_US" value="false" />
             <lang locale="zh_CN" value="false" />
+            <lang locale="zh_HK" value="false" />
             <lang locale="zh_TW" value="false" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDPanel1].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[kDPanel1].properties.property[border].value">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt; &lt;Border&gt;&lt;Type&gt;2&lt;/Type&gt;&lt;Name&gt;Etched&lt;/Name&gt;&lt;/Border&gt; " />
+            <lang locale="zh_HK" value="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt; &lt;Border&gt;&lt;Type&gt;2&lt;/Type&gt;&lt;Name&gt;Etched&lt;/Name&gt;&lt;/Border&gt; " />
             <lang locale="zh_TW" value="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt; &lt;Border&gt;&lt;Type&gt;2&lt;/Type&gt;&lt;Name&gt;Etched&lt;/Name&gt;&lt;/Border&gt; " />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[prmtContract].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[prmtContract].properties.property[commitFormat].value">
             <lang locale="en_US" value="$name$" />
             <lang locale="zh_CN" value="$name$" />
+            <lang locale="zh_HK" value="$name$" />
             <lang locale="zh_TW" value="$name$" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[prmtContract].properties.property[displayFormat].value">
             <lang locale="en_US" value="$name$" />
             <lang locale="zh_CN" value="$name$" />
+            <lang locale="zh_HK" value="$name$" />
             <lang locale="zh_TW" value="$name$" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[prmtContract].properties.property[editFormat].value">
             <lang locale="en_US" value="$name$" />
             <lang locale="zh_CN" value="$name$" />
+            <lang locale="zh_HK" value="$name$" />
             <lang locale="zh_TW" value="$name$" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[prmtContract].properties.property[queryInfo].value">
-            <lang locale="en_US" value="com.kingdee.eas.fdc.contract.app.ContractBillF7Query" />
-            <lang locale="zh_CN" value="com.kingdee.eas.fdc.contract.app.ContractBillF7Query" />
-            <lang locale="zh_TW" value="com.kingdee.eas.fdc.contract.app.ContractBillF7Query" />
+            <lang locale="en_US" value="com.kingdee.eas.fdc.contract.app.ContractBillReceiveQuery" />
+            <lang locale="zh_CN" value="com.kingdee.eas.fdc.contract.app.ContractBillReceiveQuery" />
+            <lang locale="zh_HK" value="com.kingdee.eas.fdc.contract.app.ContractBillReceiveQuery" />
+            <lang locale="zh_TW" value="com.kingdee.eas.fdc.contract.app.ContractBillReceiveQuery" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlAmount].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlAmount].properties.property[dataType].value">
             <lang locale="en_US" value="1" />
             <lang locale="zh_CN" value="1" />
+            <lang locale="zh_HK" value="1" />
             <lang locale="zh_TW" value="1" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlAmount].properties.property[editable].value">
             <lang locale="en_US" value="false" />
             <lang locale="zh_CN" value="false" />
+            <lang locale="zh_HK" value="false" />
             <lang locale="zh_TW" value="false" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlAmount].properties.property[precision].value">
             <lang locale="en_US" value="2" />
             <lang locale="zh_CN" value="2" />
+            <lang locale="zh_HK" value="2" />
             <lang locale="zh_TW" value="2" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlBalance].alias">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
             <lang locale="zh_TW" value="null" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlBalance].properties.property[dataType].value">
             <lang locale="en_US" value="1" />
             <lang locale="zh_CN" value="1" />
+            <lang locale="zh_HK" value="1" />
             <lang locale="zh_TW" value="1" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlBalance].properties.property[editable].value">
             <lang locale="en_US" value="false" />
             <lang locale="zh_CN" value="false" />
+            <lang locale="zh_HK" value="false" />
             <lang locale="zh_TW" value="false" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].components.component[txtControlBalance].properties.property[precision].value">
             <lang locale="en_US" value="2" />
             <lang locale="zh_CN" value="2" />
+            <lang locale="zh_HK" value="2" />
             <lang locale="zh_TW" value="2" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].description">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="关联框架合约" />
+            <lang locale="zh_HK" value="關聯框架合約" />
             <lang locale="zh_TW" value="關聯框架合約" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.ContractBillReceiveLinkContractBillEditUI].title">
             <lang locale="en_US" value="null" />
             <lang locale="zh_CN" value="关联合约规划" />
+            <lang locale="zh_HK" value="關聯合約規劃" />
             <lang locale="zh_TW" value="關聯合約規劃" />
         </rs>
     </resource>
